ensure top questions and drop down aren't hidden behind header

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -103,12 +103,16 @@ a {
       font-size: 24px;
    }
    @include media-breakpoint-only(sm) {
+      margin-top: 120px;
    }
    @include media-breakpoint-only(md) {
+      margin-top: 120px;
    }
    @include media-breakpoint-only(lg) {
+      margin-top: 120px;
    }
    @include media-breakpoint-only(xl) {
+      margin-top: 120px;
    }
 }
 .dropdown {
@@ -117,12 +121,16 @@ a {
       font-size: 12px;
    }
    @include media-breakpoint-only(sm) {
+      margin-top: 120px;
    }
    @include media-breakpoint-only(md) {
+      margin-top: 120px;
    }
    @include media-breakpoint-only(lg) {
+      margin-top: 120px;
    }
    @include media-breakpoint-only(xl) {
+      margin-top: 120px;
    }
 }
 
